# llama-cpp-entropy

./: telegram-harness.py  termux-build.sh  termux-download-model.sh
include/entropy/: hybrid_provider.h  philox_provider.h  qrng_provider.h  ring_buffer.h
quantum-entropy-backend/: CMakeLists.txt  README.md
quantum-entropy-backend/bench/: bench_providers.cpp
quantum-entropy-backend/include/entropy/: chacha20_provider.h  config.h  entropy_provider.h  file_provider.h  qrng_http_client.h
quantum-entropy-backend/patches/: llama-sampler-integration.patch
quantum-entropy-backend/src/: chacha20_provider.cpp  config.cpp  file_provider.cpp  philox_provider.cpp  qrng_provider.cpp  ring_buffer.cpp
quantum-entropy-backend/tests/: test_providers.cpp  test_ring_buffer.cpp
src/: CMakeLists.txt  entropy_provider.cpp  hybrid_provider.cpp  llama-sampler.cpp  qrng_http_client.cpp
